# fastapp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/tests/: test_api.py
deployment/: Jenkinsfile  docker-compose.yaml
deployment/ansible/: ansible.cfg  deploy.yaml  hosts.ini  hosts.inv
deployment/scripts/: build.sh  deploy.sh  env.sh  push.sh  test.sh
